Add option for bots to toggle player following in Cooperative mode.

--- a/Scripts/CustomOptions/BotOptions.cfg
+++ b/Scripts/CustomOptions/BotOptions.cfg
@@ -475,6 +475,19 @@ Gadget:
 Type:   Separator
 
 //
+Gadget: TTRS Follow players in Cooperative
+Tip:    TTRS should bots follow players in co-op mode or not
+Type:   Toggle
+Var:    BOT_iFollowPlayers
+
+String: TTRS No
+Value:  0
+String: TTRS Yes (default)
+Value:  1
+String: TTRS Yes, unless there's an enemy
+Value:  2
+
+//
 Gadget: TTRS Speed multiplier
 Tip:    TTRS moving speed multiplier
 Type:   Toggle
