Move all properties of a bot class into a separate structure. Serialization doesn't matter here because bots are dynamically added. And if there were any new properties added, it would desync old demos anyway.

--- a/Sources/EntitiesMP/EntitiesMP.vcxproj
+++ b/Sources/EntitiesMP/EntitiesMP.vcxproj
@@ -588,6 +588,7 @@ copy Debug\$(TargetName).lib $(SolutionDir)..\Bin\Debug\ &gt;nul</Command>
     <ClCompile Include="WorldSettingsController.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Bots\BotStructure.h" />
     <ClInclude Include="..\Bots\CustomPackets.h" />
     <ClInclude Include="..\Bots\Hotkeys.h" />
     <ClInclude Include="..\Bots\Logic\BotFunctions.h" />
