--- a/Sources/EntitiesMP/EntitiesMP.vcxproj.filters
+++ b/Sources/EntitiesMP/EntitiesMP.vcxproj.filters
@@ -1658,6 +1658,9 @@
     <ClInclude Include="..\Bots\Hotkeys.h">
       <Filter>Header Files\Bots headers</Filter>
     </ClInclude>
+    <ClInclude Include="..\Bots\BotStructure.h">
+      <Filter>Header Files\Bots headers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="NavigationMarker.es">
