Separate all logic methods from the bot class. - Replace arguments of every function to take a bot structure instead of a player/bot entity. - Make bot serialization a part of the bot structure.

--- a/Sources/EntitiesMP/EntitiesMP.vcxproj
+++ b/Sources/EntitiesMP/EntitiesMP.vcxproj
@@ -317,6 +317,7 @@ copy Debug\$(TargetName).lib $(SolutionDir)..\Bin\Debug\ &gt;nul</Command>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Bots\BotModMain.cpp" />
+    <ClCompile Include="..\Bots\BotStructure.cpp" />
     <ClCompile Include="..\Bots\CustomPackets.cpp" />
     <ClCompile Include="..\Bots\Hotkeys.cpp" />
     <ClCompile Include="..\Bots\Logic\BotFunctions.cpp" />
