Implement respawn delay setting for bots. Now bots may only respawn after a certain time passes or not respawn at all.

--- a/Scripts/CustomOptions/BotOptions.cfg
+++ b/Scripts/CustomOptions/BotOptions.cfg
@@ -64,6 +64,26 @@ String: 6
 Value:  6
 
 //
+Gadget: TTRS Respawn delay
+Tip:    TTRS how long to wait until respawning
+Var:    BOT_fRespawnDelay
+
+String: TTRS 0s (No delay)
+Value:  0
+String: TTRS 1s
+Value:  1
+String: TTRS 2s
+Value:  2
+String: TTRS 3s
+Value:  3
+String: TTRS 5s
+Value:  5
+String: TTRS 10s
+Value:  10
+String: TTRS No respawn
+Value:  -1
+
+//
 Gadget:
 Type:   Separator
 //
