Add bot setting for toggling fall hazard avoidance. - Suppress normal jumping while fall hazard avoidance is active. - Make jumping during fall hazard avoidance toggleable with a jump setting. - Move third person view and crosshair settings under the bot settings construction to make them independent from difficulty settings.

--- a/Scripts/CustomOptions/BotOptions.cfg
+++ b/Scripts/CustomOptions/BotOptions.cfg
@@ -599,6 +599,17 @@ String: TTRS Yes (default)
 Value:  1
 
 //
+Gadget: TTRS Avoid fall hazards
+Type:   Toggle
+Tip:    TTRS should bots try going around bottomless pits or not
+Var:    BOT_bAvoidPits
+
+String: TTRS No (default)
+Value:  0
+String: TTRS Yes
+Value:  1
+
+//
 Gadget:
 Type:   Separator
 //
